--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 image: node
 
 stages:
-  - build
-  - test
+  - teste
+  - package
   - deploy
 
 cache:
@@ -14,9 +14,17 @@ before_script:
   - pwd
 
 teste site:
+  stage: test
+  before_script:
+    - npm install -g broken-link-checker wait-on
+  script:
+    - cd website
+    - npm install && npm run start &
+    - wait-on http://localhost:3000 --timeout 30000
+    - blc --recursive --exclude-external http://localhost:3000
 
-build site:
-  stage: build
+package site:
+  stage: package
   artifacts:
    name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME"
    when: always
