--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,6 @@ stages:
   - package
   - deploy
 
-cache:
-  paths:
-    - ./website/build
 
 before_script:
   - whoami
@@ -25,6 +22,11 @@ teste site:
 
 package site:
   stage: package
+  cache:
+    key: site-package
+    policy: push
+    paths:
+      - ./website/build
   artifacts:
    name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME"
    when: always
@@ -37,13 +39,18 @@ package site:
     - npm install	
     - npm run build 
 
-deploy to stagin:
+
+deploy to website:
   stage: deploy
+  cache:
+    key: site-package
+      policy: pull
+      paths:
+        - ./website/build
   before_script:
     - npm install -g surge
   script: 
     - surge --project ./website/build/missaodevops --domain missaodevops
- 
   after_script:
     - whoami
   environment:
