--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,11 @@ teste site:
     - wait-on http://localhost:3000 --timeout 30000
     - blc --recursive --exclude-external http://localhost:3000
 
+vulnerabilities check:
+  stage: test
+  script:
+    - 
+
 package site:
   stage: package
   cache:
